--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,19 +1,16 @@
-pipeline
-{
+pipeline{
     agent any
         tools{
-            jdk 'JDK 21' 
-            maven 'Maven'
+            jdk 'JDK 21'
+            maven 'Maven 3'
         }
-        stages
-        {
-            stage('Build Maven')
-            {
-                steps
-                {
-                    checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url:'https://github.com/pradeepa-2004/Employee-form-freestyle';]])
+        stages{
+            stage('Build Maven'){
+                steps{
+                    checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/HarinirajaRB/JenkinsDockerExample.git']])
                     bat 'mvn clean install'
-                } 
+                }
             }
-       }
+           
+        }
 }
